--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "5ce3425f-4a64-4fa3-b6ee-94809d0b8f07"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
